# CVolume

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/nifti/: CMakeLists.txt
src/: CMakeLists.txt  baseClass.cpp  baseClass.h  basicMathOp.cpp  basicMathOp.h  test.cpp  volume.cpp  volume.h
tools/: CMakeLists.txt  converter.cpp
utests/: CMakeLists.txt  utest_addoperator.cpp  utest_arrayops.cpp  utest_bracketmagic.cpp  utest_constructor.cpp  utest_copyconst.cpp  utest_crop.cpp  utest_divoperator.cpp  utest_minmax.cpp  utest_multoperator.cpp  utest_normalize.cpp  utest_pos.cpp  utest_rand.cpp  utest_setget.cpp  utest_subsoperator.cpp
